* Se agregó el mensaje de bienvenida. * Se simplificó el cart.js a pedido. * Se solucionó el responsive de la navbar en todas las páginas. * Se corrigió la construcción del logout o bienvenida, asegurando que se inserte correctamente dentro del UL y no como un LI dentro de otro LI. * Se reemplazaron todas las variables var por let. * Se quitó el comentario de la Entrega II del CSS. * Se redujo la tipografía de las cards de productos para mejorar la visibilidad.

--- a/css/styles.css
+++ b/css/styles.css
@@ -388,8 +388,6 @@ img.card-header {
   color: #555;
 }
 
-/* Nuevas reglas entrega II */ 
-
 .titulo-producto {
   height: 70px; /* Ajusta la altura según sea necesario */
   overflow: hidden;
@@ -406,6 +404,7 @@ img.card-header {
   display: -webkit-box;
   -webkit-line-clamp: 3; /* Número de líneas permitidas */
   -webkit-box-orient: vertical;
+  font-size: 12px /* Hacemos que el texto sea mas chico para ver mas contenido */
 }
 
 #product-description {
